# Data-Selection-Software

./: README.md
Data Selection Software/: CMakeLists.txt  CMakeLists.txt.user.b788438  CMakeLists.txt.user.ec92148  Convert_Mat_Qimage.h  GDALopencv.cpp  Resources.qrc  gdalopencv.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Data Selection Software/Data/Seed Viabillity/: Dark Correction.bil  Dark Correction.hdr  Response Correction.bil  Response Correction.hdr  scan1.hdr  scan2.hdr  scan3.hdr  wavelength_nir.xlsx
Data Selection Software/Results/All Spectra/: Group7_1.txt  Group7_13txt.txt
Data Selection Software/Results/Mean Spectra/: Mean_spec_2.txt  Mean_spec_3.txt  Mean_spec_4.txt  Mean_spec_5.txt  Mean_spec_6.txt  Mean_spec_7.txt  Mean_spec_8.txt  Mean_spec_9.txt
